using Microsoft.AspNetCore.Mvc.RazorPages;

namespace LottoWebApp.Pages.Auth
{
    public class AccessDeniedModel : PageModel
    {
        public void OnGet()
        {

        }
    }
}
